--- a/src/resources/scss/common.scss
+++ b/src/resources/scss/common.scss
@@ -1,5 +1,9 @@
 @import 'reset';
-@import 'swiper';
+@import 'fonts';
+@import 'layout';
+@import 'text';
+@import 'form';
+@import 'modal';
 
 // ir
 .blind {
