Data instance 해결

--- a/src/resources/scss/_keyframe.scss
+++ b/src/resources/scss/_keyframe.scss
@@ -31,12 +31,12 @@
 }
 
 @keyframes modal-out {
-    from {
+    0% {
         transform: translate(-50%, -50%);
         opacity: 1;
     }
 
-    to {
+    100% {
         transform: translate(-50%, -65%);
         opacity: 0;
     }
@@ -55,12 +55,12 @@
 }
 
 @keyframes modal-btm-out {
-    from {
+    0% {
         transform: translate(-50%, 0%);
         opacity: 1;
     }
 
-    to {
+    100% {
         transform: translate(-50%, 30%);
         opacity: 0;
     }
