--- a/src/resources/scss/_modal.scss
+++ b/src/resources/scss/_modal.scss
@@ -118,9 +118,16 @@ $modal-duration: .4s;
             animation: modal-dim-in $modal-duration;
         }
 
-        // 기본, full 팝업
+        // 기본
         .ly-modal-wrap {
             animation: modal-in $modal-duration cubic-bezier(0.34, 1.56, 0.64, 1);
+        }
+
+        // full 팝업
+        &.full {
+            .ly-modal-wrap {
+                animation: modal-full-in $modal-duration cubic-bezier(0.34, 1.56, 0.64, 1);
+            }
         }
 
         // btm 팝업
@@ -138,9 +145,16 @@ $modal-duration: .4s;
             animation: modal-dim-out $modal-duration;
         }
 
-        // 기본, full 팝업
+        // 기본
         .ly-modal-wrap {
             animation: modal-out $modal-duration cubic-bezier(0.36, 0, 0.66, -0.56);
+        }
+
+        // full 팝업
+        &.full {
+            .ly-modal-wrap {
+                animation: modal-full-out $modal-duration cubic-bezier(0.36, 0, 0.66, -0.56);
+            }
         }
 
         // btm 팝업
@@ -153,8 +167,11 @@ $modal-duration: .4s;
 
     &.full {
         .ly-modal-wrap {
+            top: 0;
+            left: 0;
             max-width: 100%;
             height: 100%;
+            transform: translate(0, 0);
 
             // ios15 이슈
             &:after {
