--- a/src/resources/scss/_layout.scss
+++ b/src/resources/scss/_layout.scss
@@ -219,6 +219,7 @@ $ly-nav-width: 6.4rem;
 }
 
 .about-wrap {
+    padding: 0 2rem;
     .txt-p {
         font-size: 2.4rem;
         text-align: center;
