range 임시 추가, modal 수정 필요

--- a/src/resources/scss/common.scss
+++ b/src/resources/scss/common.scss
@@ -6,6 +6,8 @@
 @import 'modal';
 @import 'accordion';
 @import 'tab';
+@import 'tooltip';
+@import 'range';
 
 // @import 'prism';
 @import 'guide';
