--- a/src/resources/scss/_text.scss
+++ b/src/resources/scss/_text.scss
@@ -15,8 +15,37 @@
     }
 }
 
-a.link_text,
-button.link_text {
+a.link-text,
+button.link-text {
     color: #a1a1a1;
     text-decoration: underline;
+}
+
+.txt-mark {
+    $target: ':not(ul):not(ol), >li, >dd';
+
+    &#{$target} {
+        position: relative;
+        padding-left: 0.8rem;
+
+        &+& {
+            margin-top: 0.4rem;
+        }
+
+        &:before {
+            content: "";
+            position: absolute;
+            top: 0.6em;
+            left: 0;
+            width: 0.3rem;
+            height: 0.3rem;
+        }
+
+        &.dot {
+            &:before {
+                background: #222;
+                border-radius: 50%;
+            }
+        }
+    }
 }
