--- a/src/resources/scss/_keyframe.scss
+++ b/src/resources/scss/_keyframe.scss
@@ -1,3 +1,6 @@
+$timing-in: cubic-bezier(0.34, 1.56, 0.64, 1);
+$timing-out: cubic-bezier(0.36, 0, 0.66, -0.56);
+
 // modal dim show
 @keyframes modal-dim-in {
     0% {
@@ -23,7 +26,7 @@
 // modal default show
 @keyframes modal-in {
     0% {
-        transform: translate(-50%, -65%);
+        transform: translate(-50%, -70%);
         opacity: 0;
     }
 
@@ -41,7 +44,7 @@
     }
 
     100% {
-        transform: translate(-50%, -65%);
+        transform: translate(-50%, -70%);
         opacity: 0;
     }
 }
@@ -49,7 +52,7 @@
 // modal full show
 @keyframes modal-full-in {
     0% {
-        transform: translate(-50%, -15%);
+        transform: translate(-50%, -20%);
         opacity: 0;
     }
 
@@ -67,7 +70,7 @@
     }
 
     100% {
-        transform: translate(-50%, -15%);
+        transform: translate(-50%, -20%);
         opacity: 0;
     }
 }
@@ -142,5 +145,23 @@
     100% {
         transform: translateY(-25%);
         opacity: 0;
+    }
+}
+
+// checkbox show
+@keyframes check-in {
+    0% {
+        width: 0;
+        height: 0;
+    }
+
+    25% {
+        height: 0.6rem;
+        width: 0;
+    }
+
+    100% {
+        height: 0.6rem;
+        width: 1.2rem;
     }
 }
