--- a/src/resources/scss/_modal.scss
+++ b/src/resources/scss/_modal.scss
@@ -1,5 +1,3 @@
-@import 'keyframe';
-
 $modal-duration: .4s;
 
 .modal-open {
@@ -132,20 +130,20 @@ $modal-duration: .4s;
 
         // 기본
         .ly-modal-wrap {
-            animation: modal-in $modal-duration cubic-bezier(0.34, 1.56, 0.64, 1);
+            animation: modal-in $modal-duration $timing-in;
         }
 
         // full 팝업
         &.full {
             .ly-modal-wrap {
-                animation: modal-full-in $modal-duration cubic-bezier(0.34, 1.56, 0.64, 1);
+                animation: modal-full-in $modal-duration $timing-in;
             }
         }
 
         // btm 팝업
         &.btm {
             .ly-modal-wrap {
-                animation: modal-btm-in $modal-duration cubic-bezier(0.34, 1.56, 0.64, 1);
+                animation: modal-btm-in $modal-duration $timing-in;
             }
         }
     }
@@ -159,20 +157,20 @@ $modal-duration: .4s;
 
         // 기본
         .ly-modal-wrap {
-            animation: modal-out $modal-duration cubic-bezier(0.36, 0, 0.66, -0.56);
+            animation: modal-out $modal-duration $timing-out;
         }
 
         // full 팝업
         &.full {
             .ly-modal-wrap {
-                animation: modal-full-out $modal-duration cubic-bezier(0.36, 0, 0.66, -0.56);
+                animation: modal-full-out $modal-duration $timing-out;
             }
         }
 
         // btm 팝업
         &.btm {
             .ly-modal-wrap {
-                animation: modal-btm-out $modal-duration cubic-bezier(0.36, 0, 0.66, -0.56);
+                animation: modal-btm-out $modal-duration $timing-out;
             }
         }
     }
