--- a/src/resources/scss/_reset.scss
+++ b/src/resources/scss/_reset.scss
@@ -273,7 +273,9 @@ label>input[type="checkbox"] {
     bottom: 0;
     width: 100%;
     height: 100%;
+    border: none;
     opacity: 0;
+    appearance: none;
 }
 
 input[type="number"] {
