--- a/src/resources/scss/_tooltip.scss
+++ b/src/resources/scss/_tooltip.scss
@@ -48,14 +48,14 @@
     &.shown {
         [data-tooltip-target] {
             display: block;
-            animation: tooltip-in .4s cubic-bezier(0.34, 1.56, 0.64, 1);
+            animation: tooltip-in .4s $timing-in;
         }
     }
 
     &.hiding {
         [data-tooltip-target] {
             display: block;
-            animation: tooltip-out .3s cubic-bezier(0.36, 0, 0.66, -0.56);
+            animation: tooltip-out .3s $timing-out;
         }
     }
 }
