--- a/src/resources/scss/_keyframe.scss
+++ b/src/resources/scss/_keyframe.scss
@@ -165,3 +165,28 @@ $timing-out: cubic-bezier(0.36, 0, 0.66, -0.56);
         width: 1.2rem;
     }
 }
+
+// toast show
+@keyframes toast-in {
+    0% {
+        transform: translateY(50%);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateY(0%);
+        opacity: 1;
+    }
+}
+
+// toast hide
+@keyframes toast-out {
+    0% {
+        opacity: 1;
+    }
+
+    100% {
+        transform: translateY(50%);
+        opacity: 0;
+    }
+}
