--- a/src/resources/scss/common.scss
+++ b/src/resources/scss/common.scss
@@ -8,9 +8,9 @@
 @import 'accordion';
 @import 'tab';
 @import 'tooltip';
+@import 'toast';
 @import 'range';
 
-// @import 'prism';
 @import 'guide';
 
 // ir
