--- a/src/resources/scss/_text.scss
+++ b/src/resources/scss/_text.scss
@@ -15,6 +15,12 @@
     }
 }
 
+.content-title {
+    position: relative;
+    margin-bottom: 1.2rem;
+    font-size: 1.8rem;
+}
+
 a.link-text,
 button.link-text {
     color: #a1a1a1;
